--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "node-fetch": "^2.6.1",
+    "node-schedule": "^1.3.2",
     "puppeteer": "^5.3.1"
   },
   "devDependencies": {
